[gd_scene load_steps=12 format=2]

[ext_resource path="res://scene/NPC/Andre/InteractAreaAndre.gd" type="Script" id=1]
[ext_resource path="res://art/project-art/png/HUD/ImanorBalloonx2.png" type="Texture" id=2]
[ext_resource path="res://GUI/DialogBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/project-art/png/Characters/Andre/bearded-idle-1.png" type="Texture" id=4]
[ext_resource path="res://art/project-art/png/Characters/Andre/bearded-idle-2.png" type="Texture" id=5]
[ext_resource path="res://art/project-art/png/Characters/Andre/bearded-idle-3.png" type="Texture" id=6]
[ext_resource path="res://art/project-art/png/Characters/Andre/bearded-idle-4.png" type="Texture" id=7]
[ext_resource path="res://art/project-art/png/Characters/Andre/bearded-idle-5.png" type="Texture" id=8]
[ext_resource path="res://GUI/SelectionBox.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[node name="Andre" type="Node2D"]

[node name="InteractAreaAndre" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="HasQuest" type="Sprite" parent="InteractAreaAndre" index="0"]

visible = false
position = Vector2( 21, -52 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 226, 64.5, 31, 31.75 )
_sections_unfolded = [ "Region" ]

[node name="NoHasQuest" type="Sprite" parent="InteractAreaAndre" index="1"]

visible = false
position = Vector2( 21, -52 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 226.25, 31.75, 32, 32 )
_sections_unfolded = [ "Region", "Visibility" ]

[node name="TextBox" parent="InteractAreaAndre" index="2" instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractAreaAndre" index="3"]

position = Vector2( -7.76317, 5.28913 )
scale = Vector2( 4.03271, 4.83925 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="InteractAreaAndre" index="4"]

position = Vector2( 0, 4.2352 )
scale = Vector2( 3, 3 )
frames = SubResource( 2 )
animation = "idle"
frame = 4
_sections_unfolded = [ "Transform" ]

[node name="SelectionBox" parent="InteractAreaAndre" index="5" instance=ExtResource( 9 )]

[connection signal="body_entered" from="InteractAreaAndre" to="InteractAreaAndre" method="_on_InteractArea_body_entered"]

[connection signal="body_exited" from="InteractAreaAndre" to="InteractAreaAndre" method="_on_InteractArea_body_exited"]

[connection signal="animation_finished" from="InteractAreaAndre/AnimatedSprite" to="InteractAreaAndre" method="_on_AnimatedSprite_animation_finished"]


